--- a/index.html
+++ b/index.html
@@ -6,12 +6,47 @@
 <meta name=”author” content=”Ala”/>
 <meta name=”keywords” content=”autobus, autobusy, ranking, najlepsze, żółty, zielony, transport publiczny, przystanek, linia”/>
 </head>
-<body>
-  <h1>ranking autobusów</h1>
-  <p>poniżej przedstawiam mój osobisty ranking linii autobusowych z których miałam okazję regularnie korzystać</p>
-  <h2>miejsce 7</h2>
+  
+<body style="background-color: #FFEE58; color: #4E2F2F">
+  <center>  <h1><span style="color: green">ranking autobusów</span></h1>
+  <h2><p>poniżej przedstawiam mój osobisty ranking linii autobusowych <br/> z których miałam okazję regularnie korzystać</p></h2>
+  
+  <h3><span style="color: red">miejsce 7</span></h3>
+  <h4><span style="color: green">653</span></h4>
   <p>9/30 punktów</p>
-  <p>generalnie to średnio pamiętam moje warzenia z jazdy tym autobusem. rzadko nim jeżdżę i ciężko mi stwierdzić.</p>
+  <p>generalnie to średnio pamiętam moje warzenia z jazdy tym autobusem.<br/> rzadko nim jeżdżę i ciężko mi stwierdzić.</p>
+  
+  <h3><span style="color: red">miejsce 6</span></h3>
+  <h4><span style="color: green">41</span></h4>
+  <p>9,5/30 punktów</p>
+  <p>całkiem lubię, ale okropnie się nim jeździ bo hałasuje i jest stary i brzydki,<br/> ale się wyróżnia, bo jest biały.<br/> problem się pojawia jak przyjedzie nie białe 41 i można być lekko skołowaną.<br/> godziny jazdy też ma akurat fajne i zazwyczaj nim jeździłam lub wracałam ze szkoły.</p>
+  
+  <h3><span style="color: red">miejsce 5</span></h3>
+  <h4><span style="color: green">45</span></h4>
+  <p>11/30 punktów</p>
+  <p>jeździ do Katowic i do Łazisk przez Mikołów, więc jest dosyć światowy, dużo wspomnień</p>
+  
+  <h3><span style="color: red">miejsce 4</span></h3>
+  <h4><span style="color: green">J</span></h4>
+  <p>16/30 punktów</p>
+  <p>bardzo kultowy busik zwany też wsiobusem (albo wiesiobusem albo jeszcze jakoś inaczej, już nie pamiętam).<br/> ma szaloną i momentami wyboistą trasę,<br/> bo objeżdża wszystkie okoliczne wioski, sołectwa i moją dzielnicę.<br/> mam nawet przystanek koło domu ale nigdy go nie używam bo wtedy bus jedzie nie w tą stronę co potrzebuję.</p>
+  
+  <h3><span style="color: red">miejsce 3</span></h3>
+  <h4><span style="color: green">E2</span></h4>
+  <p>16,5/30 punktów</p>
+  <p>mało kto kogo znam nim jeździ bo zaczyna on w Tychach,<br/> potem zatrzymuje się w Mikołowie na jednym przystanku, a potem dopiero w Gliwicach,<br/> jeździłam nim czasem do szkoły, bo pędzi i omija przystanki</p>
+  
+  <h3><span style="color: red">miejsce 2</span></h3>
+  <h4><span style="color: green">29</span></h4>
+  <p>17/30 punktów</p>
+  <p>również można dojechać do galerii katowickiej i do Łazisk.<br/> bardziej prestiżowy niż 45 (nie jestem w stanie powiedzieć dlaczego ale takie odnoszę wrażenie),<br/> dużo wspomnień, mogę nim dojechać na zajęcia taneczne</p>
+  
+  <h3><span style="color: red">miejsce 1</span></h3>
+  <h4><span style="color: green">33</span></h4>
+  <p>22/30 punktów</p>
+  <p>jest to mój ulubiony autobus, jest szybki, dość punktualny, jeżdżę nim czasem do szkoły.<br/> kiedyś raz jechałam takim super nowoczesnym z ekranami i nawet ta platforma dla nieposprawianych sama się wysuwała (!)</p></center>
+  
+
 
 
 </body>
